// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MnemonicWordInput renders correct words correctly 1`] = `
<View
  style={
    Object {
      "padding": 4,
      "width": "50%",
    }
  }
>
  <View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "borderRadius": 27,
            "borderWidth": 1,
            "padding": 17,
            "paddingBottom": 3,
            "paddingTop": 7,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 6,
              "width": 0,
            },
            "shadowOpacity": 0.02,
            "shadowRadius": 5,
          },
          Object {
            "paddingTop": 6,
          },
          Object {
            "borderColor": "#47D396",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        editable={true}
        enablesReturnKeyAutomatically={true}
        keyboardType={undefined}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={undefined}
        placeholder={undefined}
        placeholderTextColor="#DADADA"
        returnKeyType="next"
        selectionColor="#007AFF"
        style={
          Array [
            Object {
              "color": "#000000",
              "fontSize": 13,
              "height": 27,
              "letterSpacing": 1.45,
              "width": 278,
            },
            Array [
              Object {
                "fontFamily": "Menlo-Regular",
                "fontSize": 13,
                "height": 27,
                "padding": 0,
                "paddingLeft": 16,
                "width": "100%",
              },
              Object {
                "color": "#47D396",
              },
            ],
          ]
        }
        value={undefined}
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Array [
            Object {
              "color": "#DDDDDF",
              "fontSize": 13,
              "fontWeight": "bold",
              "left": 7,
              "position": "absolute",
              "textAlign": "right",
              "top": 11.5,
              "width": 20,
            },
            Object {
              "color": "#47D396",
            },
          ],
        ]
      }
    >
      3
      .
    </Text>
  </View>
</View>
`;

exports[`MnemonicWordInput renders correctly 1`] = `
<View
  style={
    Object {
      "padding": 4,
      "width": "50%",
    }
  }
>
  <View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "borderRadius": 27,
            "borderWidth": 1,
            "padding": 17,
            "paddingBottom": 3,
            "paddingTop": 7,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 6,
              "width": 0,
            },
            "shadowOpacity": 0.02,
            "shadowRadius": 5,
          },
          Object {
            "paddingTop": 6,
          },
          Object {
            "borderColor": "#DADADA",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        editable={true}
        enablesReturnKeyAutomatically={true}
        keyboardType={undefined}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={undefined}
        placeholder={undefined}
        placeholderTextColor="#DADADA"
        returnKeyType="next"
        selectionColor="#007AFF"
        style={
          Array [
            Object {
              "color": "#000000",
              "fontSize": 13,
              "height": 27,
              "letterSpacing": 1.45,
              "width": 278,
            },
            Array [
              Object {
                "fontFamily": "Menlo-Regular",
                "fontSize": 13,
                "height": 27,
                "padding": 0,
                "paddingLeft": 16,
                "width": "100%",
              },
              Object {},
            ],
          ]
        }
        value={undefined}
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Array [
            Object {
              "color": "#DDDDDF",
              "fontSize": 13,
              "fontWeight": "bold",
              "left": 7,
              "position": "absolute",
              "textAlign": "right",
              "top": 11.5,
              "width": 20,
            },
            Object {},
          ],
        ]
      }
    >
      2
      .
    </Text>
  </View>
</View>
`;

exports[`MnemonicWordInput renders incorrect words correctly 1`] = `
<View
  style={
    Object {
      "padding": 4,
      "width": "50%",
    }
  }
>
  <View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "borderRadius": 27,
            "borderWidth": 1,
            "padding": 17,
            "paddingBottom": 3,
            "paddingTop": 7,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 6,
              "width": 0,
            },
            "shadowOpacity": 0.02,
            "shadowRadius": 5,
          },
          Object {
            "paddingTop": 6,
          },
          Object {
            "borderColor": "#FF6968",
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        autoCorrect={false}
        editable={true}
        enablesReturnKeyAutomatically={true}
        keyboardType={undefined}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={undefined}
        placeholder={undefined}
        placeholderTextColor="#DADADA"
        returnKeyType="next"
        selectionColor="#007AFF"
        style={
          Array [
            Object {
              "color": "#000000",
              "fontSize": 13,
              "height": 27,
              "letterSpacing": 1.45,
              "width": 278,
            },
            Array [
              Object {
                "fontFamily": "Menlo-Regular",
                "fontSize": 13,
                "height": 27,
                "padding": 0,
                "paddingLeft": 16,
                "width": "100%",
              },
              Object {
                "color": "#FF6968",
              },
            ],
          ]
        }
        value={undefined}
      />
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Array [
            Object {
              "color": "#DDDDDF",
              "fontSize": 13,
              "fontWeight": "bold",
              "left": 7,
              "position": "absolute",
              "textAlign": "right",
              "top": 11.5,
              "width": 20,
            },
            Object {
              "color": "#FF6968",
            },
          ],
        ]
      }
    >
      4
      .
    </Text>
  </View>
</View>
`;
